<resources>
    <string name="app_name">FileManager</string>
    <string name="apk">APK</string>
    <string name="folder">Folder</string>
    <string name="video">Video</string>
    <string name="apK">APK</string>
    <string name="capaccity">Capaccity</string>
    <string name="phone">Phone</string>
    <string name="used">Used 36gb / 72gb</string>
    <string name="uninstall_apps">Uninstall apps</string>
    <string name="data_saving_information">The Data Saver feature in Android 7.0 release provides this functionality to users The Data Saver feature in Android 7.0 release provides this functionality to users</string>
    <string name="large_file">Large file</string>
    <string name="_6_8gb">6,8GB</string>
    <string name="file_found">Found 92 files</string>
    <string name="see_more">See more</string>
    <string name="review_individual_videos">Review individual videos</string>
    <string name="tv_batman_mp4">The Batman.mp4</string>
    <string name="tv_batman_apk">The Batman.apk</string>
    <string name="application_data">Application data</string>
    <string name="apkk">APK</string>
    <string name="apKK">APK</string>
    <string name="about">About</string>
    <string name="agree_to_privacy_policy">Agree to Privacy Policy</string>
    <string name="user_experience_programmer">User Experience Programmer</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="starred">Starred</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="search">Search</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="document">Document</string>
    <string name="music">Music</string>
    <string name="trash">Trash</string>
    <string name="zip">Zip</string>
    <string name="download">Download</string>
    <string name="tv_apk">Apk</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="recent">Recent</string>
    <string name="grant">Grant</string>
    <string name="since_android_11_google_requests_file_managers_to_request_user_permission_for_managing_all_files_on_the_device_details_here">Since Android 11, Google requests File Managers to request user permission for managing all files on the device. Details <a href="http://www.google.com">here.</a></string>
    <string name="amaze_file_manager_needs_this_permission_too_after_pressing_granthere_please_select_allow_access_to_manage_all_files_option_on_the_next_screen">Amaze File Manager needs this permission too. After pressing Granthere, please select <b>Allow access to manage all files </b>option on the next screen.</string>
    <string name="language">Language</string>
    <string name="policy">Policy</string>
    <string name="share_file_manager">Share File Manager</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="let_me_recoomend_this_application">Let me recommend you this application</string>
    <string name="chosse_one">choose one</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_browser">Open in Browser</string>
    <string name="device_not_brower">Device not browser</string>
    <string name="_19_09_2022_1_11ch_665kb">19_09_2022_1_11ch_665kb</string>
    <string name="last_edited_by_me">Last edited by me</string>
    <string name="file_zip">File Zip</string>
    <string name="chat">Chat</string>
    <string name="image">Image</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="canceling_this_dialog_will_exit_the_app">Canceling this dialog will exit the app.</string>
    <string name="cancel">Cancel</string>
    <string name="describe_the_issue_you_ve_encountered">Describe the issue you\'ve encountered</string>
    <string name="send">Send</string>
    <string name="ph_n_h_i">Phản hồi</string>
    <string name="img_6418_jpg">IMG_6418.JPG</string>
    <string name="information">Information</string>
    <string name="open_with">Open with</string>
    <string name="extract_file">Extract file</string>
    <string name="compress_file">Compress file</string>
    <string name="cut">Cut</string>
    <string name="rename">Rename</string>
    <string name="favorites">Favorites</string>
    <string name="tues_4_october_2022_10_21_am">Tues,4 October ,2022-10:21 AM</string>
    <string name="date_created">Date Created</string>
    <string name="_879_x_747">879 x 747</string>
    <string name="dimensions">Dimensions</string>
    <string name="_879kb">879KB</string>
    <string name="size">Size</string>
    <string name="link">link</string>
    <string name="android">Android</string>
    <string name="location">Location</string>
    <string name="picture">Picture</string>
    <string name="type">Type</string>
    <string name="ti_ng_vi_t">Tiếng Việt</string>
    <string name="_2022_05_20_17_png">2022-05-20_17.png</string>
    <string name="backgroundcolorfuldobeautiful_png">Backgroundcolorfuldobeautiful_png</string>
    <string name="items_are_deleted_forever_after_30_days">Items are deleted forever after 30 days</string>
    <string name="file_manager">File Manager</string>
    <string name="t_ng_t_p_tin_3_891">Tổng tệp tin 3,891</string>
    <string name="_72_11_gb">72,11 GB</string>
    <string name="c_n_tr_ng">Còn trống</string>
    <string name="_9_31_gb">9.31 GB</string>
    <string name="h_th_ng">Hệ thống</string>
    <string name="_4_11_gb">4.11 GB</string>
    <string name="ng_d_ng">Ứng dụng</string>
    <string name="_6_7_gb">6.7 GB</string>
    <string name="_2_1_gb">2.1 GB</string>
    <string name="t_i_li_u">Tài liệu</string>
    <string name="_24_11_gb">24.11 GB</string>
    <string name="fhhfhhh_vvvvvvvvvvvvvvhhhhhhhhhhhhhhhhhhhhhfjfjjfj">fhhfhhh vvvvvvvvvvvvvvhhhhhhhhhhhhhhhhhhhhhfjfjjfj</string>
    <string name="v1_210553">V1-210553</string>
    <string name="check_for_update">Check for update</string>
    <string name="ti_ng_anh">Tiếng Anh</string>
</resources>