<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_folder"
        android:icon="@drawable/ic_folder"
        android:title="@string/folder"

        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_favourite"
        android:icon="@drawable/home"
        android:title="@string/favorite"

        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"

        app:showAsAction="always" />


</menu>