<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="22dp"
            android:background="@drawable/custom_view_grant_permission"
            android:padding="28dp">

            <TextView
                android:id="@+id/tv_grant_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/grant_permission"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_link"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/since_android_11_google_requests_file_managers_to_request_user_permission_for_managing_all_files_on_the_device_details_here"
                android:textColor="#62757D"
                android:autoLink="all"
                android:linksClickable="true"
                android:textSize="14sp"
                android:textColorLink="#6552FE"
                app:layout_constraintLeft_toLeftOf="@id/tv_grant_permission"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_grant_permission"

                />

            <TextView
                android:id="@+id/tv_content_allow_access"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/amaze_file_manager_needs_this_permission_too_after_pressing_granthere_please_select_allow_access_to_manage_all_files_option_on_the_next_screen"
                android:textColor="#62757D"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@id/tv_grant_permission"
                app:layout_constraintRight_toRightOf="@id/tv_link"
                app:layout_constraintTop_toBottomOf="@id/tv_link"
                />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="20dp"
                android:text="@string/canceling_this_dialog_will_exit_the_app"
                android:textColor="#B3F5222D"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@id/tv_grant_permission"
                app:layout_constraintRight_toRightOf="@id/tv_link"
                app:layout_constraintTop_toBottomOf="@id/tv_content_allow_access"

                />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                android:background="@drawable/custom_ripple"
                android:text="@string/cancel"
                android:textColor="#62757D"
                android:textSize="16sp"
                app:layout_constraintRight_toLeftOf="@id/tv_grant"
                app:layout_constraintTop_toBottomOf="@id/tv_error"

                />

            <TextView
                android:id="@+id/tv_grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                android:text="@string/grant"
                android:background="@drawable/custom_ripple"
                android:textColor="#6552FE"
                android:textSize="16sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_cancel" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>